--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,50 @@
   box-sizing: border-box;
 }
 
+.etch-container {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid green;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  gap: 1rem;
+  background: rgb(129, 3, 126);
+  background: linear-gradient(
+    90deg,
+    rgba(129, 3, 126, 1) 0%,
+    rgba(215, 192, 114, 1) 100%
+  );
+}
+.user-number {
+  width: 2.5rem;
+  height: 28px;
+  border: 2px solid black;
+  border-radius: 3px;
+  text-align: center;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.user-submit {
+  background-color: antiquewhite;
+  padding: 5px 8px;
+  font-weight: bold;
+  border: 2px solid black;
+  border-radius: 3px;
+}
+.reset {
+  background-color: antiquewhite;
+  padding: 5px 8px;
+  font-weight: bold;
+  border: 2px solid black;
+  border-radius: 3px;
+}
+
 .board {
   display: flex;
   align-items: center;
@@ -16,6 +60,7 @@
   display: flex;
   flex-direction: column;
   border: 2px solid rgb(227, 50, 50);
+  background-color: aliceblue;
 }
 
 .row {
@@ -23,7 +68,7 @@
   flex: 1;
 }
 .column {
-  border: 1px solid black;
+  border: 0.1px solid black;
   /* border: 1px solid #2dbc1a; */
   flex: 1;
 }
